FEAT: Create pipeline

--- a/notebook/Project_Image_Classifier_Project.ipynb
+++ b/notebook/Project_Image_Classifier_Project.ipynb
@@ -103,7 +103,8 @@
     "# TODO: Create a training set, a validation set and a test set.\n",
     "TRAINING_SET = DATASET[\"train\"]\n",
     "TESTING_SET = DATASET[\"test\"]\n",
-    "VALIDATION_SET = DATASET[\"validation\"]"
+    "VALIDATION_SET = DATASET[\"validation\"]\n",
+    "# Delegate normalisation and rescaling to pipeline phase"
    ]
   },
   {
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -316,7 +317,16 @@
    "outputs": [],
    "source": [
     "# TODO: Create a pipeline for each set.\n",
-    "\n"
+    "def format_image(image, label):\n",
+    "    image_float = tf.cast(image, tf.float32)\n",
+    "    rescaled_image = tf.image.resize(image_float, (IMAGE_SHAPE, IMAGE_SHAPE))\n",
+    "    formatted_image = rescaled_image / 255\n",
+    "    return formatted_image, label\n",
+    "\n",
+    "\n",
+    "TRAINING_BATCHES = TRAINING_SET.shuffle(NUMBER_OF_TRAINING_EXAMPLES // 4).map(format_image).batch(BATCH_SIZE).prefetch(1)\n",
+    "TESTING_BATCHES = TESTING_SET.map(format_image).batch(BATCH_SIZE).prefetch(1)\n",
+    "VALIDATION_BATCHES = VALIDATION_SET.map(format_image).batch(BATCH_SIZE).prefetch(1)"
    ]
   },
   {
