FEAT: Prototype classifier

--- a/notebook/Project_Image_Classifier_Project.ipynb
+++ b/notebook/Project_Image_Classifier_Project.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 64,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -50,10 +50,12 @@
     "%config InlineBackend.figure_format = 'retina'\n",
     "# TODO: Make all necessary imports.\n",
     "import json\n",
+    "import time\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import tensorflow as tf\n",
-    "import tensorflow_datasets as tfds"
+    "import tensorflow_datasets as tfds\n",
+    "import tensorflow_hub as hub"
    ]
   },
   {
@@ -368,7 +370,61 @@
    "outputs": [],
    "source": [
     "# TODO: Build and train your network.\n",
-    "\n"
+    "# Load MobileNet\n",
+    "MOBILENET_URL = \"https://tfhub.dev/google/tf2-preview/mobilenet_v2/feature_vector/4\"\n",
+    "mobile_net_model = hub.KerasLayer(MOBILENET_URL, input_shape=(IMAGE_SHAPE, IMAGE_SHAPE, 3))\n",
+    "mobile_net_model.trainable = False  # Don't change weights of CNN\n",
+    "\n",
+    "\n",
+    "# Build a new feed-forward network - tacked on more layers just to see what would happen\n",
+    "layer_neurons = [512, 256, 128]\n",
+    "model = tf.keras.Sequential()\n",
+    "model.add(mobile_net_model)\n",
+    "for neurons in layer_neurons:\n",
+    "    model.add(tf.keras.layers.Dense(neurons, activation='relu'))\n",
+    "    model.add(tf.keras.layers.Dropout(0.3))\n",
+    "model.add(tf.keras.layers.Dense(NUMBER_OF_CLASSES, activation='softmax'))\n",
+    "\n",
+    "\n",
+    "# Train the new classifier\n",
+    "EPOCHS = 30\n",
+    "PATIENCE = 3\n",
+    "# convenience wrappers:\n",
+    "def get_save_path():\n",
+    "    return f\"./{int(time.time())}.h5\"\n",
+    "def save_model():\n",
+    "    return model.save(get_save_path())\n",
+    "    \n",
+    "\n",
+    "# Compile model (try using same parameters as the lessons, since this is also a classification task):\n",
+    "model.compile(\n",
+    "    optimizer='adam',\n",
+    "    loss='sparse_categorical_crossentropy',\n",
+    "    metrics=['accuracy'],\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# define callbacks\n",
+    "EARLY_STOP = tf.keras.callbacks.EarlyStopping(\n",
+    "    monitor='val_loss',\n",
+    "    mode =\"min\",\n",
+    "    patience=PATIENCE,\n",
+    "    restore_best_weights=True,\n",
+    ")\n",
+    "SAVE_BEST = tf.keras.callbacks.ModelCheckpoint(  # Just in case, so that this can be resumed, because it will trained unattended\n",
+    "    get_save_path(),\n",
+    "    monitor='val_loss',\n",
+    "    save_best_only=True,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Perform training\n",
+    "history = model.fit(\n",
+    "    TRAINING_BATCHES,\n",
+    "    epochs = EPOCHS,\n",
+    "    validation_data=VALIDATION_BATCHES,\n",
+    "    callbacks=[EARLY_STOP, SAVE_BEST],\n",
+    ")"
    ]
   },
   {
