--- a/notebook/Project_Image_Classifier_Project.ipynb
+++ b/notebook/Project_Image_Classifier_Project.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -361,13 +361,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "4zElEHViXLni"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/30\n",
+      "16/16 [==============================] - 26s 713ms/step - loss: 4.6951 - accuracy: 0.0176 - val_loss: 4.5061 - val_accuracy: 0.0471\n",
+      "Epoch 2/30\n",
+      "16/16 [==============================] - 9s 591ms/step - loss: 4.4477 - accuracy: 0.0539 - val_loss: 4.2599 - val_accuracy: 0.1500\n",
+      "Epoch 3/30\n",
+      "16/16 [==============================] - 10s 594ms/step - loss: 4.1732 - accuracy: 0.0882 - val_loss: 3.8391 - val_accuracy: 0.2108\n",
+      "Epoch 4/30\n",
+      "16/16 [==============================] - 10s 617ms/step - loss: 3.7722 - accuracy: 0.1412 - val_loss: 3.2916 - val_accuracy: 0.3108\n",
+      "Epoch 5/30\n",
+      "16/16 [==============================] - 10s 643ms/step - loss: 3.2886 - accuracy: 0.2069 - val_loss: 2.6830 - val_accuracy: 0.4147\n",
+      "Epoch 6/30\n",
+      "16/16 [==============================] - 11s 669ms/step - loss: 2.7093 - accuracy: 0.3294 - val_loss: 2.1899 - val_accuracy: 0.5284\n",
+      "Epoch 7/30\n",
+      "16/16 [==============================] - 11s 675ms/step - loss: 2.3232 - accuracy: 0.3912 - val_loss: 1.9391 - val_accuracy: 0.5853\n",
+      "Epoch 8/30\n",
+      "16/16 [==============================] - 11s 684ms/step - loss: 1.9729 - accuracy: 0.4765 - val_loss: 1.6220 - val_accuracy: 0.6029\n",
+      "Epoch 9/30\n",
+      "16/16 [==============================] - 11s 692ms/step - loss: 1.5980 - accuracy: 0.5696 - val_loss: 1.4480 - val_accuracy: 0.6510\n",
+      "Epoch 10/30\n",
+      "16/16 [==============================] - 11s 692ms/step - loss: 1.4060 - accuracy: 0.6216 - val_loss: 1.3375 - val_accuracy: 0.6745\n",
+      "Epoch 11/30\n",
+      "16/16 [==============================] - 11s 692ms/step - loss: 1.2494 - accuracy: 0.6529 - val_loss: 1.2291 - val_accuracy: 0.6843\n",
+      "Epoch 12/30\n",
+      "16/16 [==============================] - 11s 681ms/step - loss: 1.0778 - accuracy: 0.7098 - val_loss: 1.1661 - val_accuracy: 0.7039\n",
+      "Epoch 13/30\n",
+      "16/16 [==============================] - 11s 689ms/step - loss: 0.8636 - accuracy: 0.7510 - val_loss: 1.1558 - val_accuracy: 0.6853\n",
+      "Epoch 14/30\n",
+      "16/16 [==============================] - 12s 743ms/step - loss: 0.8373 - accuracy: 0.7735 - val_loss: 1.0450 - val_accuracy: 0.7333\n",
+      "Epoch 15/30\n",
+      "16/16 [==============================] - 13s 803ms/step - loss: 0.6759 - accuracy: 0.8069 - val_loss: 1.0099 - val_accuracy: 0.7333\n",
+      "Epoch 16/30\n",
+      "16/16 [==============================] - 13s 829ms/step - loss: 0.6548 - accuracy: 0.8255 - val_loss: 0.9935 - val_accuracy: 0.7441\n",
+      "Epoch 17/30\n",
+      "16/16 [==============================] - 13s 845ms/step - loss: 0.5396 - accuracy: 0.8549 - val_loss: 0.9840 - val_accuracy: 0.7196\n",
+      "Epoch 18/30\n",
+      "16/16 [==============================] - 13s 831ms/step - loss: 0.5245 - accuracy: 0.8549 - val_loss: 0.9368 - val_accuracy: 0.7559\n",
+      "Epoch 19/30\n",
+      "16/16 [==============================] - 13s 809ms/step - loss: 0.4421 - accuracy: 0.8627 - val_loss: 0.9685 - val_accuracy: 0.7441\n",
+      "Epoch 20/30\n",
+      "16/16 [==============================] - 13s 797ms/step - loss: 0.4075 - accuracy: 0.8873 - val_loss: 0.9563 - val_accuracy: 0.7363\n",
+      "Epoch 21/30\n",
+      "16/16 [==============================] - 13s 845ms/step - loss: 0.3587 - accuracy: 0.9039 - val_loss: 0.9287 - val_accuracy: 0.7510\n",
+      "Epoch 22/30\n",
+      "16/16 [==============================] - 13s 810ms/step - loss: 0.3166 - accuracy: 0.9098 - val_loss: 0.9308 - val_accuracy: 0.7314\n",
+      "Epoch 23/30\n",
+      "16/16 [==============================] - 13s 797ms/step - loss: 0.2934 - accuracy: 0.9167 - val_loss: 0.9329 - val_accuracy: 0.7480\n",
+      "Epoch 24/30\n",
+      "16/16 [==============================] - 13s 835ms/step - loss: 0.2769 - accuracy: 0.9176 - val_loss: 0.9113 - val_accuracy: 0.7529\n",
+      "Epoch 25/30\n",
+      "16/16 [==============================] - 13s 810ms/step - loss: 0.2358 - accuracy: 0.9275 - val_loss: 0.9663 - val_accuracy: 0.7441\n",
+      "Epoch 26/30\n",
+      "16/16 [==============================] - 13s 795ms/step - loss: 0.2497 - accuracy: 0.9324 - val_loss: 0.9459 - val_accuracy: 0.7402\n",
+      "Epoch 27/30\n",
+      "16/16 [==============================] - 13s 806ms/step - loss: 0.2070 - accuracy: 0.9422 - val_loss: 0.9216 - val_accuracy: 0.7559\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Build and train your network.\n",
     "# Load MobileNet\n",
